# Semantic-IoT-Behavior

./: .gitignore  CITATION.cff  LICENSE  LICENSE.md  README.md  pyproject.toml
analysis/controlled_runtime/: partial_runtime_drift_summary.json
analysis/geometry/: diagnostics_all.json  diagnostics_perace.json  diagnostics_poolmean.json  diagnostics_wholefile.json
analysis/real_traffic/: runtime_exact_vs_semantic_outcomes.csv  runtime_final_rank_topn_ccdf.csv  runtime_overlap_semantic_diagnostic.csv
data/: README.md
data/mud_compact/: HueBulbMud_compact.txt  amazonEchoMud_compact.txt  blipcareBPmeterMud_compact.txt  canaryCameraMud_compact.txt  chromecastUltraMud_compact.txt  hellobarbieMud_compact.txt  hpprinterMud_compact.txt  ihomepowerplugMud_compact.txt  pixstarphotoframeMud_compact.txt  ringdoorbellMud_compact.txt  tplinkcameraMud_compact.txt  tplinkplugMud_compact.txt  tribyspeakerMud_compact.txt  wemomotionMud_compact.txt  wemoswitchMud_compact.txt  withingssleepsensorMud_compact.txt
data/runtime_aces/: BlipCareBPMeter_746a89002e25_runtime_aces.csv  HPPrinter_705a0fe49bc0_runtime_aces.csv  HelloBarbie_28c2ddffa52d_runtime_aces.csv  NestDropCam_308cfb2fe4b2_runtime_aces.csv  PixStarPhotoFrame_e076d033bb85_runtime_aces.csv  RingDoorBell_884aea31669d_runtime_aces.csv  TPLinkCamera_f4f26D9351f1_runtime_aces.csv  TPLinkSmartPlug_50c7bf005639_runtime_aces.csv
docs/: contents.md  data_notes.md  reproduction.md
src/: compact_mud.py  convert_mud_compact.py  embed.py  gen_whiten_emb.py  runtime_behavior_demo.py  runtime_matches.py  runtime_score.py  score.py
(+157 files in other folders)
